--- a/abstracts.tex
+++ b/abstracts.tex
@@ -2,7 +2,7 @@
 \begin{etaremune}
 \item
     \Shaoqing, SD. Zuo, \& Y. Ren. (2018).
-    High-Resolution Mapping of Direct CO2 Emissions and Uncertainties at the Urban Scale.
+    High-Resolution Mapping of Direct CO$_2$ Emissions and Uncertainties at the Urban Scale.
     Abstract 37 presented at 13th International Symposium of Spatial Accuracy, Spatial Accuracy 2018, Beijing, China.
 \item
     \Shaoqing\CF, XM. Zheng, SD. Zuo, \& Y. Ren. (2018).
