--- a/cv.tex
+++ b/cv.tex
@@ -112,13 +112,16 @@
 \end{center}
 
 \input{education}
-\input{awards}
-\input{activities}
+%\input{awards}
+%\input{activities}
 \input{skills}
-\input{language}
+%\input{language}
 \input{interests}
+\input{language}
 \input{software}
 \input{researches}
+\input{awards}
+\input{activities}
 \input{publications}
 \input{abstracts}
 \input{talks}
