--- a/publications.tex
+++ b/publications.tex
@@ -50,22 +50,22 @@
 \begin{etaremune}
 \item
     \Shaoqing, SD. Zuo, \& Y. Ren.
-    High-resolution mapping of direct CO2 emissions and uncertainties at the urban scale. 
-    \Review.
+    High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale. 
+    (\Review).
 \item
     \Shaoqing\CF, XM. Zheng, SD. Zuo, \& Y. Ren.
     Improving the Prediction Accuracy of Forest Aboveground Biomass Map by Integrating Machine Learning and Spatial Statistics. 
-    \textit{submitted}.
+    (\textit{submitted}).
 \item
     SD. Zuo, \Shaoqing, Y. Ren, \&  ZW. Yu.
     Quantifying the relationship between the fragmentation of the urban form and the carbon dioxide emission distribution at different spatial resolutions. 
-    \textit{submitted}.
+    (\textit{submitted}).
 \item
     ZF. Wu, \Shaoqing, W. Man, Q. Chen, SD. Zuo, JF. Tang, YY. Li, Y. Ren.
     Interactive effects of human activity and environmental factors on variation in urban forest surface temperature. 
-    \textit{submitted}.
+    (\textit{submitted}).
 \item
     LY. Cai, SD. Zuo, ZF. Wu, GL. Yun, XM. Zheng, \Shaoqing, Y. Ren.
     Effects of different green spaces on air PM2.5 in the winter in Southeast China at landscape scales.
-    \textit{submitted}
+    (\textit{submitted}).
 \end{etaremune}
