--- a/talks.tex
+++ b/talks.tex
@@ -7,7 +7,7 @@
     May. 27, 2018.
 \item
     \Shaoqing\
-    High-Resolution Mapping of Direct CO2 Emissions and Uncertainties at the Urban Scale.
+    High-Resolution Mapping of Direct CO$_2$ Emissions and Uncertainties at the Urban Scale.
     \textit{13th International Symposium of Spatial Accuracy, Spatial Accuracy 2018, China National Convention Center}, Beijing, China.
     May. 22, 2018.
 \item
