--- a/education.tex
+++ b/education.tex
@@ -1,9 +1,9 @@
 \section*{Education}
 \begin{tabular}{p{0.16\textwidth} p{0.84\textwidth}}
-2016-2019 & \textbf{M.S} in Ecology \newline
+2016-2019 & \textbf{M.Sc} in Ecology \newline
        Institute of Urban Environment,Chinese Academy of Sciences, Xiamen, China \\
 
-2012-2016 & \textbf{B.S.} in Geographical Sciences(National Base) \newline
+2012-2016 & \textbf{B.Sc} in Geographical Sciences(National Base) \newline
        Fuajian Normal University, Fuzhou, China
 %      \newline
 %      Thesis: \textit{Simulating seismic wave propagation in 3D heterogeneous isotropic media \newline
