--- a/publications.tex
+++ b/publications.tex
@@ -11,25 +11,30 @@
 \subsection*{Peer-Reviewed Journal Articles}
 \begin{etaremune}
 \item
+    SD. Zuo, \Shaoqing, YY. Li, JF. Tang, Y. Ren. (2018).
+	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
+    \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175-2198
+    \DOI{10.3390/ijerph15102175}. [SCI, IF = 2.145]
+\item
     \Shaoqing, HX. Jiang, JJ. Li, X. Su, J. Wu, Y. Ren.(2018).
 	Influence of walking environment on robbery, snatch and theft crime in urban area, H city, China.
-    \textit{Scientia Geographica Sinica}. [in Chinese]
-    (\textit{accepted}) 
+    \textit{Scientia Geographica Sinica}.  \textit{38}(8), 1235-1244
+    \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, in Chinese]
 \item
     GL. Yun, SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
 	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
     \textit{Remote Sensing}. \textit{10}(4), 521-538
-    \DOI{10.3390/rs10040521}.
+    \DOI{10.3390/rs10040521}. [SCI, IF = 3.406]
 \item
     Q. Ye, G. Zeng, \Shaoqing, FL. Wang. (2018).
 	Research on the effects of different policy tools on China’s emissions reduction innovation.
     \textit{China Population, Resources and Environment}. \textit{210}(02), 115-122.
-    \DOI{10.12062/cpre.20170915}.[in Chinese]
+    \DOI{10.12062/cpre.20170915}. [CSCD, in Chinese]
 \item
     Q. Ye, \Shaoqing, G. Zeng. (2017).
 	Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
     \textit{Chinese Journal of Population Resources and Environment}. \textit{16}(1), 1-11.
-    \DOI{10.1080/10042857.2017.1418273}.
+    \DOI{10.1080/10042857.2017.1418273}. [ESCI]
 \item
     ML. Li, \Shaoqing, JY. Wang, ZJ. Shen. (2016).
 	The Analysis of Urban Spatial Development Pattern in Beijing Based on the Big Data of Government.
@@ -43,7 +48,7 @@
     \Shaoqing, JJ. Li, SD. Zuo, Y. Ren, HX. Jiang. (2017).
 	Landscape-Scale Simulation Analysis of Waterlogging and Sponge City Planning for a Central Urban Area in Fuzhou City, China.
     \textit{International Low Impact Development Conference China 2016 : LID Applications in Sponge City Projects}. 251-260.
-    \DOI{10.1061/9780784481042.028}.
+    \DOI{10.1061/9780784481042.028}. [EI]
 \end{etaremune}
 
 \subsection*{Papers submitted/under revision}
@@ -57,15 +62,19 @@
     Improving the Prediction Accuracy of Forest Aboveground Biomass Map by Integrating Machine Learning and Spatial Statistics. 
     (\textit{submitted}).
 \item
+    SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren.
+    Mechanisms that influence land-surface temperature of trees outside forests determined by combining remote sensing, ground observations, and spatial statistical models. 
+    (\textit{MinorRevisions}).
+\item
     SD. Zuo, \Shaoqing, Y. Ren, \&  ZW. Yu.
-    Quantifying the relationship between the fragmentation of the urban form and the carbon dioxide emission distribution at different spatial resolutions. 
-    (\textit{submitted}).
+    Quantifying the relationship between the urban form fragmentation and CO$_2$ emission distribution across different spatial resolutions. 
+    (\Review).
 \item
     ZF. Wu, \Shaoqing, W. Man, Q. Chen, SD. Zuo, JF. Tang, YY. Li, Y. Ren.
     Interactive effects of human activity and environmental factors on variation in urban forest surface temperature. 
-    (\textit{submitted}).
+    (\Review).
 \item
     LY. Cai, SD. Zuo, ZF. Wu, GL. Yun, XM. Zheng, \Shaoqing, Y. Ren.
     Effects of different green spaces on air PM2.5 in the winter in Southeast China at landscape scales.
-    (\textit{submitted}).
+    (\Review).
 \end{etaremune}
