--- a/software.tex
+++ b/software.tex
@@ -6,4 +6,5 @@
 2018 & \textbf{D3L Tool of NASA Satellite} -- The program provides a graphical interface to download satellite imagery from NASA, such as MODIS products, MERIS and more. \newline
        \url{https://giserdaishaoqing.github.io/D3LTool/} \\
 2018 & \textbf{geographical detector in R} -- The geographical detector software based on R.\\
+2018 & \textbf{GitHub Paper Notebook} -- The software for notebook of papers.\\
 \end{tabular}
