--- a/awards.tex
+++ b/awards.tex
@@ -1,9 +1,11 @@
 \section*{Awards \& Honors}
 
 \begin{tabular}{p{0.05\textwidth} p{0.95\textwidth}}
+2018 & National Scholarship for M.Sc.\\
 2018 & Merit Students, University of Chinese Academy of Sciences, China.\\
 2018 & The Second Scholarship, Institute of Urban Environment, Chinese Academy of Sciences, China.[\textit{top 15\%}] \\
 2018 & The National Winning Award in 2017 ``Sharing Cup" College Student Science and Technology Resource Sharing Service Innovation Contest, China.\\
+2017 & ``Excellent Volunteer" award of 15th User Conference of Esri. \\
 2017 & Merit Students, University of Chinese Academy of Sciences, China. \\
 2015 & The National Winning Award in 2015 Esri Cup National Collegiate Developed Contest in GIS·3D Modeling and Design, China.\\
 2015 & The National Third Prize in the ``Smart City" Special Competition of 14th “Challenge Cup” National College Student Curricular Academic Science and Technology Works Competition, China.\\
