--- a/cv.tex
+++ b/cv.tex
@@ -9,7 +9,7 @@
 \newcommand{\MyRole}{Graduate Student}
 \newcommand{\Shaoqing}{\textbf{\Initials, \LastName.}}  % For citations
 \newcommand{\Email}{sqddai@iue.ac.cn}
-\newcommand{\Website}{https://giserdaishaoqing.github.io/mycv/}
+\newcommand{\Website}{http://gisersqdai.top/mycv/}
 \newcommand{\Phone}{+86(0592)619-0679}
 \newcommand{\Affiliation}{
     Institute of Urban Environment,
