--- a/publications.tex
+++ b/publications.tex
@@ -11,6 +11,11 @@
 \subsection*{Peer-Reviewed Journal Articles}
 \begin{etaremune}
 \item
+    SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren.
+    Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models. 
+    \textit{Remote Sensing}. \textit{10}(11), 1814-1832
+    \DOI{10.3390/rs10111814}. [SCI, IF = 3.406]
+\item
     SD. Zuo, \Shaoqing, YY. Li, JF. Tang, Y. Ren. (2018).
 	Analysis of Heavy Metal Sources in the Soil of Riverbanks Across an Urbanization Gradient.
     \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175-2198
@@ -56,18 +61,14 @@
 \item
     \Shaoqing, SD. Zuo, \& Y. Ren.
     High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale. 
-    (\Review).
+    (\textit{submitted}).
 \item
     \Shaoqing\CF, XM. Zheng, SD. Zuo, \& Y. Ren.
     Improving the Prediction Accuracy of Forest Aboveground Biomass Map by Integrating Machine Learning and Spatial Statistics. 
     (\textit{submitted}).
 \item
-    SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren.
-    Mechanisms that influence land-surface temperature of trees outside forests determined by combining remote sensing, ground observations, and spatial statistical models. 
-    (\textit{MinorRevisions}).
-\item
-    SD. Zuo, \Shaoqing, Y. Ren, \&  ZW. Yu.
-    Quantifying the relationship between the urban form fragmentation and CO$_2$ emission distribution across different spatial resolutions. 
+    SD. Zuo, \Shaoqing, Y. Ren, R. Zhou, \&  ZW. Yu.
+    More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales 
     (\Review).
 \item
     ZF. Wu, \Shaoqing, W. Man, Q. Chen, SD. Zuo, JF. Tang, YY. Li, Y. Ren.
@@ -76,5 +77,13 @@
 \item
     LY. Cai, SD. Zuo, ZF. Wu, GL. Yun, XM. Zheng, \Shaoqing, Y. Ren.
     Effects of different green spaces on air PM2.5 in the winter in Southeast China at landscape scales.
+    (\Review).
+\item
+    GL. Yun, YR. He, YT. Jiang, PF. Dou, \& \Shaoqing.
+    PM$_2.5$ spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
+    (\Review)
+\item
+    Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.
+    A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
     (\Review).
 \end{etaremune}
