--- a/awards.tex
+++ b/awards.tex
@@ -1,7 +1,8 @@
 \section*{Awards \& Honors}
 
 \begin{tabular}{p{0.05\textwidth} p{0.95\textwidth}}
-2018 & National Scholarship for M.Sc.\\
+2018 & National Scholarship for M.Sc. [\textit{top 2-3\%}] \\
+2018 & The National Third Prize in China City Science and Technology Urban Big Data Professional Committee 2nd Big Data Support Spatial Planning and Design Competition. \\
 2018 & Merit Students, University of Chinese Academy of Sciences, China.\\
 2018 & The Second Scholarship, Institute of Urban Environment, Chinese Academy of Sciences, China.[\textit{top 15\%}] \\
 2018 & The National Winning Award in 2017 ``Sharing Cup" College Student Science and Technology Resource Sharing Service Innovation Contest, China.\\
