--- a/researches.tex
+++ b/researches.tex
@@ -2,8 +2,8 @@
 
 \begin{tabular}{p{0.22\textwidth} p{0.78\textwidth}}
 2016 - 2020 & ``Research on the key technology research and integration demonstration of urban agglomeration ecological security in the Yangtze River Delta",National Key Research and Development Plan(2016YFC0502704), \textbf{Investigator} \\
-2015 - 2018 & ``Scaling up of carbon fxation for Eucalyptus plantations based on ETKF-3DVAR mixedassimilation",National Natural Science Foundation of China(31470578), \textbf{Investigator}\\
-2015 - 2016 & ``The Spatiotemporal Difference of Tourism in Fujian Province Based on Spatial Mismatch Theory", The Tecnological Innovation Plan of University Students, Fujian Normal University(cxxl-2015137), \textbf{Investigator}\\
-2015 - 2016 & ``The Spatial Optimization Evaluation of Medical Facility Based on GIS in Cangshan District, Fuzhou", The Tecnological Innovation Plan of University Students, Fujian Normal University(cxxl-2015146), \textbf{Investigator}\\
-2014 - 2015 & ``The Optimization Model of High Education Staﬀ’s Refuge Space Under Earthquake Disater", The Tecnological Innovation Plan of University Students, Fujian Normal University(cxxl-2014137), \textbf{PI}\\
+2015 - 2018 & ``Scaling up of carbon fxation for Eucalyptus plantations based on ETKF-3DVAR hybrid data assimilation",National Natural Science Foundation of China(31470578), \textbf{Investigator}\\
+2015 - 2016 & ``The Spatiotemporal Difference of Tourism in Fujian Province Based on Spatial Mismatch Theory", The Technological Innovation Plan of University Students, Fujian Normal University(cxxl-2015137), \textbf{Investigator}\\
+2015 - 2016 & ``The Spatial Optimization Evaluation of Medical Facility Based on GIS in Cangshan District, Fuzhou", The Technological Innovation Plan of University Students, Fujian Normal University(cxxl-2015146), \textbf{Investigator}\\
+2014 - 2015 & ``The Optimization Model of High Education Staﬀ’s Refuge Space Under Earthquake Disater", The Technological Innovation Plan of University Students, Fujian Normal University(cxxl-2014137), \textbf{PI}\\
 \end{tabular}
