--- a/awards.tex
+++ b/awards.tex
@@ -1,6 +1,7 @@
 \section*{Awards \& Honors}
 
 \begin{tabular}{p{0.05\textwidth} p{0.95\textwidth}}
+2019 & The Scientific and Technological Innovation Award of Outstanding Graduate Students of the Ecological Society of China. \\
 2018 & National Scholarship for M.Sc. [\textit{top 2-3\%}] \\
 2018 & The National Third Prize in China City Science and Technology Urban Big Data Professional Committee 2nd Big Data Support Spatial Planning and Design Competition. \\
 2018 & Merit Students, University of Chinese Academy of Sciences, China.\\
@@ -10,7 +11,7 @@
 2017 & Merit Students, University of Chinese Academy of Sciences, China. \\
 2015 & The National Winning Award in 2015 Esri Cup National Collegiate Developed Contest in GIS·3D Modeling and Design, China.\\
 2015 & The National Third Prize in the ``Smart City" Special Competition of 14th “Challenge Cup” National College Student Curricular Academic Science and Technology Works Competition, China.\\
-2015 & The First Annual Fujian Normal University Student Selection, Scientifc and Technological Innovation award and Nomination, China.\\
+2015 & The First Annual Fujian Normal University Student Selection, Scientific and Technological Innovation award and Nomination, China.\\
 2015 & Scientifc and Technological Inovation Scholoarships of Fujian normal University, China.\\
 2014 & The School Wining Award during the 9th “Challenge Cup” Fujian Normal University College Student Curricular Academic Science and Technology Works Competition, China.\\
 2014 & The National Third Prize in 2014 MathorCup Global Collegiate Mathematical Contest in Modeling Certifcate of Achievement, China.\\
