--- a/publications.tex
+++ b/publications.tex
@@ -11,7 +11,7 @@
 \subsection*{Peer-Reviewed Journal Articles}
 \begin{etaremune}
 \item
-    SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren.
+    SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
     Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models. 
     \textit{Remote Sensing}. \textit{10}(11), 1814-1832
     \DOI{10.3390/rs10111814}. [SCI, IF = 3.406]
