--- a/abstracts.tex
+++ b/abstracts.tex
@@ -3,11 +3,11 @@
 \item
     \Shaoqing, SD. Zuo, \& Y. Ren. (2018).
     High-Resolution Mapping of Direct CO$_2$ Emissions and Uncertainties at the Urban Scale.
-    Abstract 37 presented at 13th International Symposium of Spatial Accuracy, Spatial Accuracy 2018, Beijing, China.
+    Abstract 37 presented at the 13th International Symposium on Spatial Accuracy Assessment in Natural Resources and Environmental Sciences(Spatial Accuracy 2018), Beijing, China.
 \item
     \Shaoqing\CF, XM. Zheng, SD. Zuo, \& Y. Ren. (2018).
     Improving the Prediction Accuracy of Forest Aboveground Biomass Map by Integrating Machine Learning and Spatial Statistics.
-    Abstract 35 presented at 13th International Symposium of Spatial Accuracy, Spatial Accuracy 2018, Beijing, China.
+    Abstract 35 presented at the 13th International Symposium on Spatial Accuracy Assessment in Natural Resources and Environmental Sciences(Spatial Accuracy 2018), Beijing, China.
 \item
     SD. Zuo, \Shaoqing, Y. Ren, \&  ZW. Yu. (2017).
     Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution.
