--- a/talks.tex
+++ b/talks.tex
@@ -8,7 +8,7 @@
 \item
     \Shaoqing\
     High-Resolution Mapping of Direct CO$_2$ Emissions and Uncertainties at the Urban Scale.
-    \textit{13th International Symposium of Spatial Accuracy, Spatial Accuracy 2018, China National Convention Center}, Beijing, China.
+    \textit{The 13th International Symposium on Spatial Accuracy Assessment in Natural Resources and Environmental Sciences(Spatial Accuracy 2018), China National Convention Center}, Beijing, China.
     May. 22, 2018.
 \item
     \Shaoqing\
