--- a/awards.tex
+++ b/awards.tex
@@ -3,7 +3,7 @@
 \begin{tabular}{p{0.05\textwidth} p{0.95\textwidth}}
 2019 & The Scientific and Technological Innovation Award of Outstanding Graduate Students of the Ecological Society of China. \\
 2018 & National Scholarship for M.Sc. [\textit{top 2-3\%}] \\
-2018 & The National Third Prize in China City Science and Technology Urban Big Data Professional Committee 2nd Big Data Support Spatial Planning and Design Competition. \\
+2018 & The National Third Prize in Urban Big Data Special Committee, Chinese Society for Urban Studies the 2nd Big Data Support Spatial Planning and Design Competition. \\
 2018 & Merit Students, University of Chinese Academy of Sciences, China.\\
 2018 & The Second Scholarship, Institute of Urban Environment, Chinese Academy of Sciences, China.[\textit{top 15\%}] \\
 2018 & The National Winning Award in 2017 ``Sharing Cup" College Student Science and Technology Resource Sharing Service Innovation Contest, China.\\
