--- a/cv.tex
+++ b/cv.tex
@@ -7,7 +7,7 @@
 \newcommand{\Initials}{SQ}
 \newcommand{\MyName}{\FirstName\ \LastName}
 \newcommand{\MyRole}{Graduate Student}
-\newcommand{\Shaoqing}{\textbf{\Initials, \LastName.}}  % For citations
+\newcommand{\Shaoqing}{\textbf{\Initials. \LastName}}  % For citations
 \newcommand{\Email}{sqddai@iue.ac.cn}
 \newcommand{\Website}{http://gisersqdai.top/mycv/}
 \newcommand{\Phone}{+86(0592)619-0679}
