--- a/publications.tex
+++ b/publications.tex
@@ -11,6 +11,11 @@
 \subsection*{Peer-Reviewed Journal Articles}
 \begin{etaremune}
 \item
+    GL. Yun, YR. He, YT. Jiang, PF. Dou, \& \Shaoqing. (2019).
+    PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
+    \textit{Atmosphere}. \textit{10}(2), 55-69
+    \DOI{10.3390/atmos10020055}. [SCI, IF = 1.704]
+\item
     SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2018).
     Determining the Mechanisms that Influence the Surface Temperature of Urban Forest Canopies by Combining Remote Sensing Methods, Ground Observations, and Spatial Statistical Models. 
     \textit{Remote Sensing}. \textit{10}(11), 1814-1832
@@ -21,7 +26,7 @@
     \textit{International Journal of Environmental Research and Public Health}. \textit{15}(10), 2175-2198
     \DOI{10.3390/ijerph15102175}. [SCI, IF = 2.145]
 \item
-    \Shaoqing, HX. Jiang, JJ. Li, X. Su, J. Wu, Y. Ren.(2018).
+    \Shaoqing, HX. Jiang, JJ. Li, X. Su, J. Wu, Y. Ren. (2018).
 	Influence of walking environment on robbery, snatch and theft crime in urban area, H city, China.
     \textit{Scientia Geographica Sinica}.  \textit{38}(8), 1235-1244
     \DOI{10.13249/j.cnki.sgs.2018.08.005}. [CSCD, in Chinese]
@@ -78,10 +83,6 @@
     LY. Cai, SD. Zuo, ZF. Wu, GL. Yun, XM. Zheng, \Shaoqing, Y. Ren.
     Effects of different green spaces on air PM2.5 in the winter in Southeast China at landscape scales.
     (\Review).
-\item
-    GL. Yun, YR. He, YT. Jiang, PF. Dou, \& \Shaoqing.
-    PM$_2.5$ spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
-    (\Review)
 \item
     Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
