--- a/abstracts.tex
+++ b/abstracts.tex
@@ -18,7 +18,7 @@
     Presented at 9th Chinese Landscape Eoclogy workshop, Guangzhou, China.
 \item
     Q. Ye, G. Zeng, \Shaoqing, FL. Wang. (2017).
-     Research on the Effects of Different Policy Tools on China’s Energy Conservation and Emissions Reduction Innovation Based on the Panel Data of 285 prefectural-level municipalities.
+     Research on the Effects of Different Policy Tools on China's Energy Conservation and Emissions Reduction Innovation Based on the Panel Data of 285 prefectural-level municipalities.
      Presented at 2017 annual conference of the Chinese geographical society, economic geography and Specialized Committee.Sichuan, China.
 \item
     SD. Zuo, \Shaoqing, Y. Ren, \&  ZW. Yu. (2017).
