--- a/language.tex
+++ b/language.tex
@@ -2,5 +2,5 @@
 
 \begin{tabular}{p{0.1\textwidth} p{0.58\textwidth} p{0.32\textwidth}}
  & \textbf{Chinese} & mother tongue\\
- & \textbf{English} & first forign language\\  
+ & \textbf{English} & first foreign language\\  
 \end{tabular}
