--- a/publications.tex
+++ b/publications.tex
@@ -74,7 +74,7 @@
 \item
     SD. Zuo, \Shaoqing, Y. Ren, R. Zhou, \&  ZW. Yu.
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales 
-    (\Review).
+    (\textit{submitted}).
 \item
     ZF. Wu, \Shaoqing, W. Man, Q. Chen, SD. Zuo, JF. Tang, YY. Li, Y. Ren.
     Interactive effects of human activity and environmental factors on variation in urban forest surface temperature. 
