--- a/activities.tex
+++ b/activities.tex
@@ -1,9 +1,5 @@
-\section*{Professional Societies \& Activities}
-
-\begin{tabular}{ll}
-2015 - present & Volunteer of The Subscription Accounts "Sustainable City·Transportation" \\
-2017 - present & Member of International Association of Landscape Ecology of China(IALE-China) \\
-2016 - 2017 & Volunteer of Green Bike-Transit \\
-2013 - 2017 & Founder, Chief Editor, Subeditor, Assistant Chief Editor of \\ 
-& The Geographical Tribune of Youth \\
-\end{tabular}
+\section{\texorpdfstring{\faGroup\ Professional Societies \& Activities}{Professional Societies \& Activities}}
+\mycvitemac{from 2015}{The Subscription Accounts "Sustainable City·Transportation"}{Volunteer}
+\mycvitemac{from 2017}{International Association of Landscape Ecology of China(IALE-China)}{Member}
+\mycvitemac{2016-2017}{Green Bike-Transit}{Volunteer}
+\mycvitemac{2013-2017}{The Geographical Tribune of Youth}{Founder, Chief Editor, Subeditor, Assistant Chief Editor}
