--- a/interests.tex
+++ b/interests.tex
@@ -1,9 +1,10 @@
-\section*{Research Interests}
-
-\begin{itemize}
-\item Urban Computing
-\item Spatial-Temporal Big Data
-\item Ecological Modeling and Ecoinformatics
-\item Intergration of Ecology, GIS and RS
-\item Spatial Statistics
-\end{itemize}
+%\section*{Research Interests}
+\section{\texorpdfstring{\faInfoCircle\ Research Interests}{Research Interests}}
+\cvitem{}{Urban Computing; Spatial-Temporal Big Data; Ecological Modeling and Ecoinformatics; Intergration of Ecology, GIS and RS; Spatial Statistics}
+%\begin{itemize}
+%\item Urban Computing
+%\item Spatial-Temporal Big Data
+%\item Ecological Modeling and Ecoinformatics
+%\item Intergration of Ecology, GIS and RS
+%\item Spatial Statistics
+%\end{itemize}
