--- a/language.tex
+++ b/language.tex
@@ -1,6 +1,2 @@
-\section*{Languages}
-
-\begin{tabular}{p{0.1\textwidth} p{0.58\textwidth} p{0.32\textwidth}}
- & \textbf{Chinese} & mother tongue\\
- & \textbf{English} & first foreign language\\  
-\end{tabular}
+\section{\texorpdfstring{\faCommentO\ Languages}{Languages}}
+\cvitem{Chinese}{Native\hfill\ English First foreign language}
