--- a/publications.tex
+++ b/publications.tex
@@ -1,14 +1,16 @@
 % AGU style: https://publications.agu.org/agu-grammar-and-style-guide/
 \newcommand{\Revision}{\textit{under revision}}
 \newcommand{\Review}{\textit{under review}}
-%\newcommand{\Submit}{\textit{submitted}}
+\newcommand{\Submitted}{\textit{submitted}}
 \newcommand{\CS}{*} % corresponding author
 \newcommand{\CF}{\textsuperscript{\#}} % co-first author
 
-\section*{Publications}
+\section{\texorpdfstring{\faBook\ Publications}{Publications}}
 \CS corresponding author, \CF co-first author.
 
-\subsection*{Peer-Reviewed Journal Articles}
+\subsection*{\texorpdfstring{\faBook\ Peer-Reviewed Journal Articles}{Peer-Reviewed Journal Articles}}
+%\subsection*{Peer-Reviewed Journal Articles}
+%\begin{enumerate}
 \begin{etaremune}
 \item
     GL. Yun, YR. He, YT. Jiang, PF. Dou, \& \Shaoqing. (2019).
@@ -51,8 +53,11 @@
     \textit{Geomatics World}. \textit{23}(3), 20-26.
     \DOI{10.3969/j.issn.1672-1586.2016.03.004}. [in Chinese]
 \end{etaremune}
+%\end{enumerate}
 
-\subsection*{Book Chapter}
+%\subsection*{Book Chapter}
+\subsection*{\texorpdfstring{\faBook\ Book Chapter}{Book Chapter}}
+%\begin{enumerate}
 \begin{etaremune}
 \item
     \Shaoqing, JJ. Li, SD. Zuo, Y. Ren, HX. Jiang. (2017).
@@ -60,21 +65,24 @@
     \textit{International Low Impact Development Conference China 2016 : LID Applications in Sponge City Projects}. 251-260.
     \DOI{10.1061/9780784481042.028}. [EI]
 \end{etaremune}
+%\end{enumerate}
 
-\subsection*{Papers submitted/under revision}
+%\subsection*{Papers submitted/under revision}
+\subsection*{\texorpdfstring{\faBook\ Papers submitted/under revision}{Papers submitted/under revision}}
+%\begin{enumerate}
 \begin{etaremune}
 \item
     \Shaoqing, SD. Zuo, \& Y. Ren.
     High-resolution mapping of direct CO$_2$ emissions and uncertainties at the urban scale. 
-    (\textit{submitted}).
+    (\Submitted).
 \item
     \Shaoqing\CF, XM. Zheng, SD. Zuo, \& Y. Ren.
     Improving the Prediction Accuracy of Forest Aboveground Biomass Map by Integrating Machine Learning and Spatial Statistics. 
-    (\textit{submitted}).
+    (\Submitted).
 \item
     SD. Zuo, \Shaoqing, Y. Ren, R. Zhou, \&  ZW. Yu.
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales 
-    (\textit{submitted}).
+    (\Submitted).
 \item
     ZF. Wu, \Shaoqing, W. Man, Q. Chen, SD. Zuo, JF. Tang, YY. Li, Y. Ren.
     Interactive effects of human activity and environmental factors on variation in urban forest surface temperature. 
@@ -88,3 +96,4 @@
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
     (\Review).
 \end{etaremune}
+%\end{enumerate}
