--- a/skills.tex
+++ b/skills.tex
@@ -1,7 +1,7 @@
-\section*{Expertise \& Skills}
-
-\begin{tabular}{p{0.22\textwidth} p{0.78\textwidth}}
-\textbf{Major} & GIScience, Remote Sensing, Spatial Statistics, Urban Studies, Environments, Ecological Modelling.\\
-\textbf{Programming} & CGA, Python, Fortran, R, Shell, LaTeX, Makrdown, Github. \\
-\textbf{Expertise} & QGIS, ArcGIS, ENVI, Erdas Image, PostGIS, City Engine. \\
+%\section*{Expertise \& Skills}
+\section{\texorpdfstring{\faLaptop\ Expertise \& Skills}{Expertise \& Skills}}
+\begin{tabular}{p{0.16\textwidth} p{0.84\textwidth}}
+\textbf{Major} & GIScience, Remote Sensing, Spatial Statistics, Urban Studies, Environments, Ecological Modelling\\
+\textbf{Programming} & CGA, Python, Fortran, R, Shell, LaTeX, Makrdown, Github \\
+\textbf{Expertise} & QGIS, ArcGIS, ENVI, Erdas Image, PostGIS, City Engine \\
 \end{tabular}
