--- a/education.tex
+++ b/education.tex
@@ -1,19 +1,3 @@
-\section*{Education}
-\begin{tabular}{p{0.16\textwidth} p{0.84\textwidth}}
-2016-2019 & \textbf{M.Sc} in Ecology \newline
-       Institute of Urban Environment,Chinese Academy of Sciences, Xiamen, China \newline 
-       supervised by Prof. Yin Ren \newline
-       Thesis: \textit{Mappping of carbon emission and sink by coupling ecological \newline
-       processing model with emission inventory} \\
-
-2012-2016 & \textbf{B.Sc} in Geographical Sciences(National Base) \newline
-       Fuajian Normal University, Fuzhou, China \newline
-       Supervised by A/Prof. Huixian Jiang \newline
-       Thesis: \textit{The simulation model of building site location and construction \newline
-       based on data augmented design and BIM: a case study of \newline
-       Fujian Normal University }
-%      \newline
-%      Thesis: \textit{Simulating seismic wave propagation in 3D heterogeneous isotropic media \newline
-%      using staggered-grid finite differences}
-%      (supervised by Prof. Lianxing Wen)
-\end{tabular}
+\section{\texorpdfstring{\faUniversity\ Education}{Education}}
+\mycvitemEDU{2016-2019}{M.Sc.}{Institute of Urban Environment,Chinese Academy of Sciences}{University of Chinese Academy of Sciences}{Supervised by Prof. Yin Ren}{Mappping of carbon emission and sink based on coupling ecological processing model with emission inventory}{Ecology}{Xiamen, China}
+\mycvitemEDU{2012-2016}{B.Sc.}{School of Geographical Sciences}{Fuajian Normal University}{Supervised by A/Prof. Huixian Jiang}{The simulation model of building site location and construction based on data augmented design and BIM: a case study of Fujian Normal University}{Geographical Sciences(National Base)}{Fuzhou, China}
