--- a/software.tex
+++ b/software.tex
@@ -1,10 +1,4 @@
-\section*{Open Software}
-
-\textit{*Year indicates when the project was started. All projects are currently ongoing.}
-
-\begin{tabular}{p{0.05\textwidth} p{0.95\textwidth}}
-2018 & \textbf{D3L Tool of NASA Satellite} -- The program provides a graphical interface to download satellite imagery from NASA, such as MODIS products, MERIS and more. \newline
-       \url{http://gisersqdai.top/D3LTool/} \\
-2018 & \textbf{geographical detector in R} -- The geographical detector software based on R.\\
-2018 & \textbf{GitHub Paper Notebook} -- The software for notebook of papers.\\
-\end{tabular}
+\section{\texorpdfstring{\faLaptop\ Developed Open Software}{Developed Open Software}}
+\mycvitemcomment{from 2018}{D3L Tool of NASA Satellite}{(The program provides a graphical interface to download satellite imagery from NASA, such as MODIS products, MERIS and more information can see \myurl{http://gisersqdai.top/D3LTool/})}
+\mycvitemcomment{from 2018}{Geographical detector in R}{(The geographical detector software based on R)}
+\mycvitemcomment{from 2018}{GitHub Paper Notebook}{(The software for notebook of papers)}
