--- a/awards.tex
+++ b/awards.tex
@@ -4,7 +4,8 @@
 \mycvitemPP{2018}{The National Third Prize in Urban Big Data Special Committee, Chinese Society for Urban Studies the 2nd Big Data Support Spatial Planning and Design Competition}{China}
 \mycvitemPP{2018}{'Applied Energy' 2018 Summer School Certification}{Beijing, China}
 \mycvitemPP{2018}{Merit Students of University of Chinese Academy of Sciences}{Beijing, China}
-\mycvitemPP{2018}{The Second Scholarship of Institute of Urban Environment, Chinese Academy of Sciences[\textit{top 15\%}].}{Xiamen, China}
+\mycvitemPP{2018}{The Second Grade Scholarship of Institute of Urban Environment, Chinese Academy of Sciences[\textit{top 15\%}].}{Xiamen, China}
+\mycvitemPP{2018}{The First Scholarship of Institute of Urban Environment, Chinese Academy of Sciences.}{Xiamen, China}
 \mycvitemPP{2018}{The National Winning Award in 2017 'Sharing Cup' College Student Science and Technology Resource Sharing Service Innovation Contest}{China}
 \mycvitemPP{2017}{'Excellent Volunteer' award of 15th User Conference of Esri}{China}
 \mycvitemPP{2017}{Merit Students of University of Chinese Academy of Sciences}{Beijing, China}
