--- a/publications.tex
+++ b/publications.tex
@@ -97,3 +97,10 @@
     (\Review).
 \end{etaremune}
 %\end{enumerate}
+\subsection*{\texorpdfstring{\faBook\ Patent}{Patent}}
+\begin{etaremune}
+\item
+     Q. Chen, Y. Ren, XM. Zheng, SD. Zuo. \Shaoqing.
+     A mixed-effect model for estimation of large area subtropical forest biomass.
+     (\textit{under apply}).
+\end{etaremune}
