--- a/researches.tex
+++ b/researches.tex
@@ -1,6 +1,7 @@
 \section{\texorpdfstring{\faUniversity\ Research Projects}{Research Projects}}
+\mycvitemac{2018-2019}{'The construction of Typhoon Disaster Assessment Index Based on GIS and Multi-source Remote Sensing Data in Fujian Province', Open Fund of the Big Data Institute of Digital Natural Disaster Monitoring in Fujian (NDMBD2018001)}{Investigator}
 \mycvitemac{2016-2020}{'Research on the key technology research and integration demonstration of urban agglomeration ecological security in the Yangtze River Delta', National Key Research and Development Plan(2016YFC0502704)}{Investigator}
-\mycvitemac{2015-2018}{'Scaling up of carbon fxation for Eucalyptus plantations based on ETKF-3DVAR hybrid data assimilation', National Natural Science Foundation of China(31470578)}{Investigator}
+\mycvitemac{2015-2018}{'Scaling up of carbon sequestration for Eucalyptus plantations based on ETKF-3DVAR hybrid data assimilation', National Natural Science Foundation of China(31470578)}{Investigator}
 \mycvitemac{2015-2016}{'The Spatiotemporal Difference of Tourism in Fujian Province Based on Spatial Mismatch Theory', The Technological Innovation Plan of University Students, Fujian Normal University(cxxl-2015137)}{Investigator}
 \mycvitemac{2015-2016}{'The Spatial Optimization Evaluation of Medical Facility Based on GIS in Cangshan District, Fuzhou', The Technological Innovation Plan of University Students, Fujian Normal University(cxxl-2015146)}{Investigator}
 \mycvitemac{2014-2015}{'The Optimization Model of High Education Staff’s Refuge Space Under Earthquake Disater', The Technological Innovation Plan of University Students, Fujian Normal University(cxxl-2014137)}{PI}
