--- a/cv.tex
+++ b/cv.tex
@@ -1,4 +1,4 @@
-%!TEX program = xelatex
+%!TEX program = PdfLaTex+MakeIndex+BibTex
 % Made with modernCV: https://github.com/xdanaux/moderncv
 
 % moderncv definition
@@ -82,6 +82,8 @@
 % Quote
 %\quote{Urban, Ecology, GIS}
 \quote{\footnotesize Last updated: \today}
+
+\AfterPreamble{\hypersetup{baseurl={}}}
 
 % Main
 
