--- a/poster.tex
+++ b/poster.tex
@@ -1,4 +1,4 @@
 \section{\texorpdfstring{\faFileImageO\ Selected Posters}{Selected Posters}}
 \mycvitemXP{2017.12.10}{Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution}{2017 AGU Fall Meeting}{New Orleans, LA, USA.}
-\mycvitemXP{2017.05.16}{Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution}{9th Lecture of Modern Ecology}{Shanghai, China}
+\mycvitemXP{2017.05.16}{The relationship between the fragmented urban form landscape and the carbon emission distribution at different resolutions}{9th Lecture of Modern Ecology}{Shanghai, China}
 \mycvitemXP{2016.06.26}{The Simulation Analysis of Waterlogging and the Sponge City Planning Control of Central Urabn Area in Fuzhou City}{2016 International Low Impact Development Conference}{Beijing, China}
