--- a/presentation.tex
+++ b/presentation.tex
@@ -1,7 +1,7 @@
 \section{\texorpdfstring{\faCommentsO\ Presentations}{Presentations}}
 \mycvitemXP{2018.05.27}{The Scale Effect, Zoning Effect of Geographical Features, the Modified Areal Unit Problem and the Chanlleges of Spatial Stastistics}{11th Chinese R Language Conference}{Renmin University of China, Beijing, China}
 \mycvitemXP{2018.05.22}{High-Resolution Mapping of Direct CO$_2$ Emissions and Uncertainties at the Urban Scale}{13th International Symposium on Spatial Accuracy Assessment in Natural Resources and Environmental Sciences(Spatial Accuracy 2018)}{China National Convention Center, Beijing, China}
-\mycvitemXP{2017.11.11}{The Environmental Effect of Urban Form on PM2.5}{9th Chinese Landscape Eoclogy workshop}{Sanyu Houtel, Guangzhou, China}
+\mycvitemXP{2017.11.11}{The Environmental Effect of Urban Form on PM2.5: A Case Study of Beijing-Tianjin-Hebei Urban Agglomeration}{9th Chinese Landscape Eoclogy workshop}{Sanyu Houtel, Guangzhou, China}
 \mycvitemXP{2017.09.28}{The Assement Platform of Urban Forest Ecosystem Servcie Based on InVEST model and IOT(\textbf{invited})}{2rd urban environment long-term monitor and sustainable development workshop}{Shanghai Normal University, Shanghai, China}
 \mycvitemXP{2016.11.27}{The Criminal Geographical Analysis about Walking Environment of Urban}{The Workshop of 12th Spatial Behavior and Planning \& Spatial-Temporal Behavior and Social Planning Research}{Beijing Union University, Beijing, China}
 \mycvitemXP{2016.07.01}{Transportation Planning of Smart City on the Basis of Data Augmentation Design Under the Perspective of Humanism: A Case Study of Fuzhou's Cangshan District}{10th annual conference of International Association of China Planning}{Peking University, Beijing, China}
