--- a/publications.tex
+++ b/publications.tex
@@ -82,19 +82,11 @@
 \item
     SD. Zuo, \Shaoqing, Y. Ren, R. Zhou, \&  ZW. Yu.
     More fragmentized urban form more CO$_2$ emissions? An comprehensive relationship from the combination analysis across different scales 
-    (\Submitted).
-\item
-    ZF. Wu, \Shaoqing, W. Man, Q. Chen, SD. Zuo, JF. Tang, YY. Li, Y. Ren.
-    Interactive effects of human activity and environmental factors on variation in urban forest surface temperature. 
-    (\Review).
-\item
-    LY. Cai, SD. Zuo, ZF. Wu, GL. Yun, XM. Zheng, \Shaoqing, Y. Ren.
-    Effects of different green spaces on air PM2.5 in the winter in Southeast China at landscape scales.
-    (\Review).
+    (\Revision).
 \item
     Q. Yang, TY. Huang, SG. Wang, JS. Li, \Shaoqing, S. Wright, YX. Wang, \& HW. Peng.
     A GIS-based high spatial resolution assessment of large-scale PV power generation potential and associated CO$_2$ emission reduction in China.
-    (\Review).
+    (\Revision).
 \end{etaremune}
 %\end{enumerate}
 \subsection*{\texorpdfstring{\faBook\ Patent}{Patent}}
