--- a/activities.tex
+++ b/activities.tex
@@ -2,4 +2,4 @@
 \mycvitemac{from 2015}{The Subscription Accounts "Sustainable City·Transportation"}{Volunteer}
 \mycvitemac{from 2017}{International Association of Landscape Ecology of China(IALE-China)}{Member}
 \mycvitemac{2016-2017}{Green Bike-Transit}{Volunteer}
-\mycvitemac{2013-2017}{The Geographical Tribune of Youth}{Founder, Chief Editor, Subeditor, Assistant Chief Editor}
+\mycvitemac{2013-2017}{The Geographical Tribune of Youth}{Founder, Chief Editor, Associate Editor, Assistant Chief Editor}
