--- a/publications.tex
+++ b/publications.tex
@@ -13,7 +13,7 @@
 %\begin{enumerate}
 \begin{etaremune}
 \item
-    GL. Yun, YR. He, YT. Jiang, PF. Dou, \& \Shaoqing. (2019).
+    GL. Yun, YR. He, YT. Jiang, PF. Dou, \Shaoqing. (2019).
     PM2.5 spatiotemporal evolution and drivers in the Yangtze River Delta between 2005 and 2015.
     \textit{Atmosphere}. \textit{10}(2), 55-69
     \DOI{10.3390/atmos10020055}. [SCI, IF = 1.704]
@@ -43,6 +43,10 @@
     \textit{China Population, Resources and Environment}. \textit{210}(02), 115-122.
     \DOI{10.12062/cpre.20170915}. [CSCD, in Chinese]
 \item
+    SD. Zuo, \Shaoqing, Y. Ren, ZW. Yu. (2017).
+    Quantifying the linear and nonlinear relations between the urban form fragmentation and the carbon emission distribution.
+    \textit{American Geophysical Union, Fall Meeting 2017, abstract GC21G-1007}.
+\item
     Q. Ye, \Shaoqing, G. Zeng. (2017).
 	Research on the effects of command-and-control and market-oriented policy tools on China’s energy conservation and emissions reduction innovation.
     \textit{Chinese Journal of Population Resources and Environment}. \textit{16}(1), 1-11.
@@ -59,6 +63,10 @@
 \subsection*{\texorpdfstring{\faBook\ Book Chapter}{Book Chapter}}
 %\begin{enumerate}
 \begin{etaremune}
+\item
+    GL. Yun, SD. Zuo, \Shaoqing, XD. Song, CD. Xu, YL. Liao, PQ. Zhao, WY. Chang, Q. Chen, YY. Li, JF. Tang, W. Man, Y. Ren. (2019).
+	Individual and Interactive Influences of Anthropogenic and Ecological Factors on Forest PM2.5 Concentrations at an Urban Scale.
+    \textit{Advances in Quantitative Remote Sensing in China–In Memory of Prof. Xiaowen Li}.316-332.
 \item
     \Shaoqing, JJ. Li, SD. Zuo, Y. Ren, HX. Jiang. (2017).
 	Landscape-Scale Simulation Analysis of Waterlogging and Sponge City Planning for a Central Urban Area in Fuzhou City, China.
